UnifiController_service.yml
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller
  namespace: unifi
spec:
  selector:
    app: unifi-controller
  ports:
    - name: unifi-controller-web-admin
      port: 80
      targetPort: 8443
      protocol: TCP
    - name: unifi-controller-device-comms
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: unifi-controller-ap-discovery
      port: 10001
      targetPort: 10001
      protocol: UDP
    - name: unifi-controller-stun
      port: 3478
      targetPort: 3478
      protocol: UDP
# status:
#   loadBalancer:
#     ingress:
#     - ip: 192.168.10.2
